welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
	if (((a<=19) && (13<=a)) && ((b<=19) && (13<=b)){
		return false
	} else if (((a<=19) && (13<=a)) || ((b<=19) && (13<=b))){
		return true
	}
	return false
}
